Fix shorts image overflow into "Watch the short" link
Add overflow:hidden to shorts-image container and clear:both to
shorts-google-link so the pre-existing image stays clipped within
its box and the link renders below the floated elements.

--- a/doc/resources/css/shorts.css
+++ b/doc/resources/css/shorts.css
@@ -66,6 +66,7 @@ div.shorts-image {
   height:      200px;
   width:       290px;
   padding-top: 20px;
+  overflow:    hidden;
 }
 
 div.shorts-comment {
@@ -95,6 +96,7 @@ div.up-link {
 }
 
 div.shorts-google-link {
+  clear:         both;
   width:         600px;
   text-align:    right;
   margin-bottom: 5px;
